# inline-buildpack

./: Cargo.toml  LICENSE  Makefile.toml  README.md  buildpack.toml
.github/workflows/: build.yml
examples/e01-hello-world/: README.md  project.toml
src/: script.rs
