[package]
name = "inline-buildpack"
version = "0.1.0"
authors = ["Terence Lee <hone02@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
libcnb = { git = "https://github.com/malax/libcnb" }
